--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.security.method.secured-enabled=true
 
 logging.level.org.hibernate.SQL=debug
 
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
 server.error.include-stacktrace=never
